Correct misc
