# routes/api.php
@@ -24,7 +24,3 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 Route::get('/products', [ProductController::class, 'index'])->middleware('auth:sanctum');
-
-Route::get('/test', function () {
-    return 'test ok';
-})->middleware('auth:sanctum');
