# swagger.yaml
@@ -27,18 +27,25 @@ paths:
               properties:
                 name:
                   type: string
+                  example: Иван
                 patronymic:
                   type: string
+                  example: Иванович
                 family:
                   type: string
+                  example: Белов
                 phone:
                   type: string
+                  example: '+79161234567'
                 email:
                   type: string
+                  example: ivan@belyu.ru
                 password:
                   type: string
+                  example: asdf&5gH
                 password_confirmation:
                   type: string
+                  example: asdf&5gH
       responses:
         default:
           description: Default error sample response
@@ -91,6 +98,11 @@ paths:
           schema:
             type: integer
             example: 1
+        - in: query
+          name: name
+          description: Filter
+          schema:
+            type: string
       responses:
         default:
           description: Default error sample response
@@ -99,20 +111,6 @@ paths:
               schema:
                 type: object
                 
-  /api/test:
-    get:
-      summary: ''
-      description: ''
-      operationId: ''
-      security:
-        - bearerAuth: []
-      responses:
-        default:
-          description: Default error sample response
-          content:
-            application/json:
-              schema:
-                type: string
           
 components:
   securitySchemes:
